# goit-pythonweb-hw--12

./: README.md  bash.exe.stackdump  docker-compose.yaml  main.py  pyproject.toml  test.db
docs/: conf.py
migrations/versions/: 926115d1e33a_add_to_model_user_email_and_avatar.py
source/: conf.py  index.rst  modules.rst
src/config/: config.py  messages.py
src/core/: depend_service.py  email_token.py
src/entity/: models.py
src/repositories/: user_repository.py
src/routes/: auth_route.py  contacts_route.py  users_route.py
src/schemas/: contact_schema.py  password_schema.py
src/services/: auth_services.py  cache.py  contact_services.py  email_services.py  user_services.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
tests/repositories/: test_base_repository.py  test_contacts_repository.py  test_refresh_token_repository.py  test_user_repository.py
